--- a/trunk/android/AndroidManifest.xml
+++ b/trunk/android/AndroidManifest.xml
@@ -13,7 +13,8 @@
         </activity>
     <activity android:theme="@style/Theme.Translucent" android:name="com.android.Turntable3D.TurntableWidget"></activity>
 <activity android:name="X10"></activity>
-<activity android:name="SocketMonitor"></activity>
+
+<service android:name="SocketMonitor"></service>
 </application>
 
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
