implemented sending arbitrary text to server

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -18,6 +18,7 @@
 <activity android:name="ServerPanel"></activity>
 <activity android:name="ScriptListActivity"></activity>
 <activity android:name="MediaPanel"></activity>
+<activity android:name="TextFlingerPanel"></activity>
 </application>
 
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
