--- a/trunk/ubudroid-server/debian/control
+++ b/trunk/ubudroid-server/debian/control
@@ -11,7 +11,8 @@ Homepage: http://androbuntu.googlecode.com/
 
 Package: ubudroid-server
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-gtk2
+Depends: ${misc:Depends}, ${python:Depends}, python-gtk2, xautomation, ppower
+Suggests: exaile
 Description: server applet for AndroBuntu/UbuDroid Android application
  ubudroid is an application to allow an Android handset to interact with the
  Ubuntu desktop.  The client application provides interfaces for media control,
