--- a/ubudroid-server/debian/control
+++ b/ubudroid-server/debian/control
@@ -1,5 +1,5 @@
 Source: ubudroid-server
-Section: electronics
+Section: utilities
 Priority: optional
 Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
 XSBC-Original-Maintainer: Karl Ostmo <kostmo@gmail.com>
