--- a/trunk/android/AndroidManifest.xml
+++ b/trunk/android/AndroidManifest.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.android.AndroBuntu"
-      android:versionCode="2" android:versionName="0.1.1">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".AndroBuntu"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    <activity android:theme="@style/Theme.Translucent" android:name="com.android.Turntable3D.TurntableWidget"></activity>
-<activity android:name="X10"></activity>
-<service android:name="SocketMonitor"></service>
-<activity android:name="ServerPanel"></activity>
-<activity android:name="ScriptListActivity"></activity>
-<activity android:name="MediaPanel"></activity>
-<activity android:name="TextFlingerPanel"></activity>
-</application>
+	package="com.googlecode.androbuntu" android:versionCode="2"
+	android:versionName="0.1.1">
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".AndroBuntu" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:theme="@style/Theme.Translucent"
+			android:name="com.android.Turntable3D.TurntableWidget"></activity>
+		<activity android:name="X10"></activity>
+		<service android:name="SocketMonitor"></service>
+		<activity android:name="ServerPanel"></activity>
+		<activity android:name="ScriptListActivity"></activity>
+		<activity android:name="MediaPanel"></activity>
+		<activity android:name="TextFlingerPanel"></activity>
+		
+		
 
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+        <!-- Broadcast Receivers that will process AppWidget updates -->
+        <receiver android:name="com.kostmo.widget.sfx.WidgetSfx" android:label="@string/widget_icon_title">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widget_sfx" />
+        </receiver>
+		
+	</application>
+
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
