--- a/trunk/android/AndroidManifest.xml
+++ b/trunk/android/AndroidManifest.xml
@@ -29,8 +29,15 @@
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/widget_blank_screen" />
         </receiver>
+        
+    		<receiver android:name=".services.WifiReceiver">
+		    <intent-filter>
+		        <action android:name="android.net.wifi.STATE_CHANGE" />
+			</intent-filter>
+		</receiver>
 		
 	</application>
 
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 </manifest> 
