--- a/trunk/android/AndroidManifest.xml
+++ b/trunk/android/AndroidManifest.xml
@@ -40,4 +40,5 @@
 
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-sdk android:targetSdkVersion="8"></uses-sdk>
 </manifest> 
